--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,9 +14,38 @@ jobs:
       - uses: actions/checkout@v2.3.4
       - uses: actions/setup-python@v2.2.2
         with:
-          python-version: 3.8
+          python-version: 3.9
       - run: |
           pip install -U pip setuptools wheel
           pip install -r requirements_lint.txt
           pip install .
       - run: flake8
+
+  pyright:
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v2.3.4
+      - uses: actions/setup-python@v2.2.2
+        with:
+          python-version: 3.9
+      - run: |
+          pip install -U pip setuptools wheel
+          pip install .
+      - uses: actions/setup-node@v2.4.0
+        with:
+          node-version: "14"
+      - run: npm install
+      - run: node_modules/.bin/pyright
+
+  pytest-cov:
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v2.3.4
+      - uses: actions/setup-python@v2.2.2
+        with:
+          python-version: 3.9
+      - run: |
+          pip install -U pip setuptools wheel
+          pip install . pytest~=6.2 pytest-cov~=2.11
+      - run: pytest --cov
+      - uses: codecov/codecov-action@v2.0.2
