Get rid of unwanted python files

--- a/copier.yml
+++ b/copier.yml
@@ -3,3 +3,15 @@ project_name: my_project_name
 
 _envops:
   keep_trailing_newline: true
+
+_exclude:
+  - .gitignore
+  # Default
+  - copier.yaml
+  - copier.yaml
+  - ~*
+  - "*.py[co]"
+  - __pycache__
+  - .git
+  - .DS_Store
+  - .svn
