--- a/copier.yml
+++ b/copier.yml
@@ -15,13 +15,13 @@ project_owner_name:
   type: str
   help: The name (or names) that will populate the LICENSE file.
   default: "{{ project_owner_github_username }}"
-  when: "{% if not project_info_same_as_above %}"
+  when: "{% if not project_info_same_as_above %}true{% endif %}"
 
 project_name:
   type: str
   help: "The name of this project. Default: github_repo_name"
   default: "{{ github_repo_name }}"
-  when: "{% if not project_info_same_as_above %}"
+  when: "{% if not project_info_same_as_above %}true{% endif %}"
 
 _envops:
   keep_trailing_newline: true
