--- a/template/.github/dependabot.yml
+++ b/template/.github/dependabot.yml
@@ -1,3 +1,5 @@
+# I changed my workflow!
+#
 # Please see the documentation for all configuration options:
 # https://help.github.com/github/administering-a-repository/configuration-options-for-dependency-updates
 
