--- a/template/.github/dependabot.yml
+++ b/template/.github/dependabot.yml
@@ -1,4 +1,4 @@
-# I changed my workflow!
+# I changed my workflow AGAIN!
 #
 # Please see the documentation for all configuration options:
 # https://help.github.com/github/administering-a-repository/configuration-options-for-dependency-updates
