--- a/copier.yml
+++ b/copier.yml
@@ -2,18 +2,18 @@ project_owner_github_username:
   type: str
   help: The username of the GitHub user hosting this project.
 
-github_repo_name:
-  type: str
-  help: The name of the GitHub repo hosting this project. 
-
 project_owner_name:
   type: str
   help: The name (or names) that will populate the LICENSE file if not the username above.
   default: "{{ project_owner_github_username }}"
 
+github_repo_name:
+  type: str
+  help: The name of the GitHub repo hosting this project.
+
 project_name:
   type: str
-  help: The name of this project if it is different from the repo name above.
+  help: The name of this project, if it is different from the repo name above.
   default: "{{ github_repo_name }}"
 
 _envops:
