Skip pyproject.toml if it already exists

--- a/copier.yml
+++ b/copier.yml
@@ -32,6 +32,7 @@ _envops:
   keep_trailing_newline: true
 
 _skip_if_exists:
+  - pyproject.toml
   - README.md
   - __init__.py
   - "test_{{ project_name }}.py.jinja"
