--- a/template/requirements_dev.txt
+++ b/template/requirements_dev.txt
@@ -1,8 +1,3 @@
-# Project-specific
-
-# Build
-flit~=3.3
-
 # Experiment
 jupyter~=1.0
 nbstripout==0.5.0
@@ -11,9 +6,10 @@ nbstripout==0.5.0
 black==21.7b0  # doesn't follow semver
 
 # Lint
--r requirements_lint.txt
 flake8-codes~=0.1  # flake8 error code introspection
 
 # Test
 pytest~=6.2
 pytest-cov~=2.12
+
+-r requirements_both.txt
