--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,21 @@
+# Template defaults
+.vscode/
+.coveragerc
+.flake8
+package.json
+pyrightconfig.json
+pytest.ini
+requirements_both.txt
+requirements_dev.txt
+requirements_cicd.txt
+update.ps1
+
+# * -------------------------------------------------------------------------------- * #
+# * https://raw.githubusercontent.com/github/gitignore/master/Node.gitignore
+
+# NPM/Node.JS because of Pyright CI/CD dependency
+node_modules/
+
 # * -------------------------------------------------------------------------------- * #
 # * https://raw.githubusercontent.com/github/gitignore/master/Python.gitignore
 
