--- a/.copier-answers.yml
+++ b/.copier-answers.yml
@@ -1,5 +1,5 @@
 # Changes here will be overwritten by Copier; NEVER EDIT MANUALLY
-_commit: 0.0.2-14-g0e653dc
+_commit: 0.0.2-18-g00aee01
 _src_path: gh:blakeNaccarato/copier-python
 github_repo_name: copier-python
 project_email: blake.naccarato+dev@gmail.com
