--- a/copier.yml
+++ b/copier.yml
@@ -34,7 +34,7 @@ _envops:
 _skip_if_exists:
   - pyproject.toml
   - README.md
-  - __init__.py
+  - "__init__.py"
   - "test_{{ project_name }}.py.jinja"
 
 _subdirectory: template
