--- a/.copier-answers.yml
+++ b/.copier-answers.yml
@@ -1,5 +1,5 @@
 # Changes here will be overwritten by Copier; NEVER EDIT MANUALLY
-_commit: 0.0.2-20-g185b539
+_commit: 0.0.2-21-g59d4776
 _src_path: gh:blakeNaccarato/copier-python
 github_repo_name: copier-python
 project_email: blake.naccarato+dev@gmail.com
