--- a/copier.yml
+++ b/copier.yml
@@ -35,6 +35,6 @@ _skip_if_exists:
   - pyproject.toml
   - README.md
   - "src/{{ project_name }}/__init__.py"
-  - "tests/test_{{ project_name }}.py.jinja"
+  - "tests/test_{{ project_name }}.py"
 
 _subdirectory: template
