--- a/template/.github/workflows/main.yml
+++ b/template/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
           python-version: 3.9
       - run: |
           pip install -U pip
-          pip install -r requirements.txt
+          pip install copier==6.0.0a7
           copier gh:blakeNaccarato/copier-python . -f -r 0.0.3
           pip install -r requirements_cicd.txt
           flit install
@@ -32,7 +32,7 @@ jobs:
           python-version: 3.9
       - run: |
           pip install -U pip
-          pip install -r requirements.txt
+          pip install copier==6.0.0a7
           copier gh:blakeNaccarato/copier-python . -f -r 0.0.3
           pip install -r requirements_cicd.txt
           flit install
@@ -51,7 +51,7 @@ jobs:
           python-version: 3.9
       - run: |
           pip install -U pip
-          pip install -r requirements.txt
+          pip install copier==6.0.0a7
           copier gh:blakeNaccarato/copier-python . -f -r 0.0.3
           pip install -r requirements_cicd.txt
           flit install
