Try templating dependency ignoring

--- a/copier.yml
+++ b/copier.yml
@@ -28,6 +28,11 @@ project_name:
   help: The name of this project, if it is different from the repo name above.
   default: "{{ github_repo_name }}"
 
+gitignore_dependencies:
+  type: bool
+  help: Whether to ignore dependencies. Should almost always be "yes".
+  default: yes
+
 _envops:
   keep_trailing_newline: true
 
