Enable new native bracket pair colorization

--- a/template/.vscode/settings.json
+++ b/template/.vscode/settings.json
@@ -94,6 +94,9 @@
 
   //! Built-in
 
+  //* Enable native bracket pair colorization
+  "editor.bracketPairColorization.enabled": true,
+
   //* Format on save. Adjust CTRL+[SHIFT/ALT]+S in "keybindings.json" as well
   "editor.formatOnSave": true,
 
