--- a/template/.github/workflows/main.yml
+++ b/template/.github/workflows/main.yml
@@ -15,14 +15,7 @@ jobs:
       - uses: actions/setup-python@v2.2.2
         with:
           python-version: 3.9
-      - run: |
-          pip install -U pip
-          pip install wheel
-          pip install pipx
-          pipx install copier==6.0.0a7
-          copier gh:blakeNaccarato/copier-python . -f -r {{ _commit }}
-          pip install -r requirements_cicd.txt
-          flit install
+      - run: setup_cicd.sh
       - run: flake8
 
   pyright:
@@ -32,14 +25,7 @@ jobs:
       - uses: actions/setup-python@v2.2.2
         with:
           python-version: 3.9
-      - run: |
-          pip install -U pip
-          pip install wheel
-          pip install pipx
-          pipx install copier==6.0.0a7
-          copier gh:blakeNaccarato/copier-python . -f -r {{ _commit }}
-          pip install -r requirements_cicd.txt
-          flit install
+      - run: setup_cicd.sh
       - uses: actions/setup-node@v2.4.0
         with:
           node-version: "14"
@@ -53,13 +39,6 @@ jobs:
       - uses: actions/setup-python@v2.2.2
         with:
           python-version: 3.9
-      - run: |
-          pip install -U pip
-          pip install wheel
-          pip install pipx
-          pipx install copier==6.0.0a7
-          copier gh:blakeNaccarato/copier-python . -f -r {{ _commit }}
-          pip install -r requirements_cicd.txt
-          flit install
+      - run: setup_cicd.sh
       - run: pytest --cov
       - uses: codecov/codecov-action@v2.1.0
