--- a/template/.github/workflows/bump.yml
+++ b/template/.github/workflows/bump.yml
@@ -14,7 +14,8 @@ jobs:
       - uses: actions/setup-python@v2.2.2
         with:
           python-version: 3.9
-      - run: tooling/setup_cicd.py
+      - run: bash tooling/setup_cicd.sh
+      - run: python tooling/setup_cicd.py
       - uses: stefanzweifel/git-auto-commit-action@v4.12.0
         with:
           commit_message: Bump `pyproject.toml` dependencies
