--- a/template/.github/workflows/changerelease.yml
+++ b/template/.github/workflows/changerelease.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   sync:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - uses: dropseed/changerelease@v1
         with:
