--- a/template/.github/workflows/bump.yml
+++ b/template/.github/workflows/bump.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/setup-python@v2.2.2
         with:
           python-version: 3.9
-      - run: bash tooling/setup_cicd.sh
+      - run: bash tooling/cicd_setup.sh
       - run: python tooling/bump_pyproject.py
       - uses: stefanzweifel/git-auto-commit-action@v4.12.0
         with:
