--- a/template/.github/workflows/publish.yml
+++ b/template/.github/workflows/publish.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/setup-python@v2.2.2
         with:
           python-version: 3.9
-      - run: bash tooling/setup_cicd.sh
+      - run: bash tooling/cicd_setup.sh
       - name: publish
         env:
           FLIT_USERNAME: __token__
