--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-.vscode
+/.vscode
 
 # * -------------------------------------------------------------------------------- * #
 # * https://raw.githubusercontent.com/github/gitignore/master/Python.gitignore
