--- a/template/.vscode/settings.json
+++ b/template/.vscode/settings.json
@@ -2,17 +2,16 @@
   // * -------------------------------------------------------------------------- * //
   // * PROJECT-SPECIFIC SETTINGS * //
 
-  //* Extension: Pylance
+  //! Extension: Pylance
   "python.languageServer": "Pylance",
   "python.analysis.autoSearchPaths": false,
 
-  //* workflows
+  //! Extension: GitHub Actions
   "github-actions.workflows.pinned.workflows": [".github/workflows/main.yml"],
 
   //* pytest
   "python.testing.pytestArgs": ["tests"],
   "python.testing.unittestEnabled": false,
-  "python.testing.nosetestsEnabled": false,
   "python.testing.pytestEnabled": true,
 
   //* markdownlint
