Recommend more extensions

--- a/template/.vscode/extensions.json
+++ b/template/.vscode/extensions.json
@@ -5,11 +5,18 @@
     "bierner.markdown-preview-github-styles",
     "blackmist.linkcheckmd",
     "cschleiden.vscode-github-actions",
+    "davidanson.vscode-markdownlint",
+    "donjayamanne.githistory",
     "dotjoshjohnson.xml",
+    "eamodio.gitlens",
     "esbenp.prettier-vscode",
+    "felipecaputo.git-project-manager",
+    "github.vscode-pull-request-github",
     "lextudio.restructuredtext",
+    "ms-python.python",
     "ms-python.vscode-pylance",
     "ms-toolsai.jupyter-keymap",
+    "ms-toolsai.jupyter",
     "npxms.hide-gitignored",
     "redhat.vscode-yaml",
     "reverbc.vscode-pytest",
