Make Dependabot look in the `dependabot` folder

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,6 +12,10 @@ updates:
     schedule:
       interval: "daily"
   - package-ecosystem: "github-actions"
+    directory: "/dependabot"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "github-actions"
     directory: "/template"
     schedule:
       interval: "daily"
