--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   bump:
     runs-on: ubuntu-20.04
-    if: ${{ github.actor == 'dependabot[bot]' }}
+    # if: ${{ github.actor == 'dependabot[bot]' }}
     steps:
       - uses: actions/checkout@v2.3.4
       - uses: actions/setup-python@v2.2.2
