--- a/dependabot/.github/workflows/publish.yml
+++ b/dependabot/.github/workflows/publish.yml
@@ -11,10 +11,10 @@ jobs:
       - uses: actions/checkout@v2.3.4
       - uses: actions/setup-python@v2.2.2
         with:
-          python-version: {{ python_version }}
+          python-version: "{{ python_version }}"
       - run: bash tooling/cicd_setup.sh
       - name: publish
         env:
           FLIT_USERNAME: __token__
-          FLIT_PASSWORD: {{ "${{" }} secrets.PYPI_TOKEN }}
+          FLIT_PASSWORD: "{{ ${{ secrets.PYPI_TOKEN }} }}"
         run: flit publish
