--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -15,7 +15,7 @@ jobs:
           python-version: 3.9
       - run: python dependabot/bump.py
       - uses: stefanzweifel/git-auto-commit-action@v4.12.0
-        env:
-          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+        # env:
+        #   GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
         with:
           commit_message: Bump dependencies
