--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -16,7 +16,8 @@ jobs:
           python-version: 3.9
       - run: python dependabot/bump.py
       - uses: stefanzweifel/git-auto-commit-action@v4.12.0
-        # env:
-        #   GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
         with:
           commit_message: Bump dependencies
+          commit_user_name: blakeNaccarato
+          commit_email: 20692450+blakeNaccarato@users.noreply.github.com
+          commit_author: Blake Naccarato <20692450+blakeNaccarato@users.noreply.github.com>
