--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -13,10 +13,11 @@ jobs:
       - uses: actions/checkout@v2.3.4
       - uses: actions/setup-python@v2.2.2
         with:
-          python-version: 3.9
+          python-version: "3.9"
       - run: python dependabot/bump.py
       - uses: stefanzweifel/git-auto-commit-action@v4.12.0
         with:
           commit_message: Bump dependencies
           commit_user_name: blakeNaccarato
           commit_user_email: 20692450+blakeNaccarato@users.noreply.github.com
+          commit_author: Blake Naccarato <20692450+blakeNaccarato@users.noreply.github.com>
