--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   push:
     branches: [main]
-    paths: ["dependabot/**"]
+    paths: [dependabot/**]
 
 jobs:
   bump:
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v2.3.4
       - uses: actions/setup-python@v2.2.2
         with:
-          python-version: "3.9"
+          python-version: 3.9
       - run: python dependabot/bump.py
       - uses: stefanzweifel/git-auto-commit-action@v4.12.0
         with:
