--- a/dependabot/.github/workflows/bump.yml
+++ b/dependabot/.github/workflows/bump.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   push:
     branches: [main]
-    paths: ["requirements.txt"]
+    paths: [requirements.txt]
 
 jobs:
   bump:
