--- a/dependabot/.github/workflows/main.yml
+++ b/dependabot/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
       - run: bash tooling/cicd_setup.sh
       - uses: actions/setup-node@v2.4.1
         with:
-          node-version: "14"
+          node-version: 14
       - run: npm install
       - run: node_modules/.bin/pyright
 
