Don't warn on unused imports in `pythonrc.py`

--- a/template/pyrightconfig.json
+++ b/template/pyrightconfig.json
@@ -1,6 +1,7 @@
 {
   "typeCheckingMode": "strict",
   "include": ["src"],
+  "ignore": ["tooling/pythonrc.py"],
   "extraPaths": ["examples", "tests"],
   "reportMissingTypeStubs": "none",
   "reportUnknownArgumentType": "none",
