--- a/template/tooling/requirements_dev.txt
+++ b/template/tooling/requirements_dev.txt
@@ -2,6 +2,9 @@
 jupyter~=1.0
 nbstripout~=0.5.0
 
+# For `python` and `ipython` via `pythonrc.py`
+rich~=11.1.0
+
 # Format
 black==22.1.0  # doesn't follow semver
 
