Defer to source of truth, `pyrightconfig.json` for `useLibraryCodeForTypes`

--- a/template/.vscode/settings.json
+++ b/template/.vscode/settings.json
@@ -5,6 +5,7 @@
   //! Extension: Pylance
   "python.languageServer": "Pylance",
   "python.analysis.autoSearchPaths": false,
+  "python.analysis.useLibraryCodeForTypes": false,
 
   //! Extension: GitHub Actions
   "github-actions.workflows.pinned.workflows": [".github/workflows/main.yml"],
