--- a/template/.vscode/settings.json
+++ b/template/.vscode/settings.json
@@ -5,7 +5,6 @@
   //! Extension: Pylance
   "python.languageServer": "Pylance",
   "python.analysis.autoSearchPaths": false,
-  "python.analysis.useLibraryCodeForTypes": false,
 
   //! Extension: GitHub Actions
   "github-actions.workflows.pinned.workflows": [".github/workflows/main.yml"],
@@ -108,6 +107,7 @@
 
   //* Enable native bracket pair colorization
   "editor.bracketPairColorization.enabled": true,
+  "editor.guides.bracketPairs": true,
 
   //* Format on save. Adjust CTRL+[SHIFT/ALT]+S in "keybindings.json" as well
   "editor.formatOnSave": true,
@@ -121,6 +121,10 @@
   //* Periodically fetch changes to tracked repo. Don't confirm on push/pull.
   "git.autofetch": true,
   "git.confirmSync": false,
+  
+  //* Don't validate the body of a commit. Assume people can wrap it in their IDE.
+  "git.inputValidationSubjectLength": 88,
+  "git.inputValidationLength": 1e100,
 
   //! Linting
   //* Also see the "Linting" section under the "NOT SYNCED" heading
