Configure pyright not to report missing parameter types Allows type information to pass through method chains

--- a/template/pyrightconfig.json
+++ b/template/pyrightconfig.json
@@ -4,6 +4,7 @@
   "ignore": ["tooling/pythonrc.py"],
   "extraPaths": ["examples", "tests"],
   "reportMissingTypeStubs": "none",
+  "reportMissingParameterType": "none",
   "reportUnknownArgumentType": "none",
   "reportUnknownLambdaType": "none",
   "reportUnknownMemberType": "none",
