Remove unnecessary key from pyrightconfig.json

--- a/template/pyrightconfig.json
+++ b/template/pyrightconfig.json
@@ -1,6 +1,5 @@
 {
-  "extraPaths": ["examples", "tests"],
-  "ignore": ["tooling/pythonrc.py"],
+  "ignore": ["tooling"],
   "include": ["src"],
   "reportMissingParameterType": "none",
   "reportMissingTypeStubs": "none",
