--- a/template/tooling/requirements_dev.txt
+++ b/template/tooling/requirements_dev.txt
@@ -11,4 +11,7 @@ black==22.1.0  # doesn't follow semver
 # Lint
 flake8-codes~=0.2  # flake8 error code introspection
 
+# For local publishing to PyPi with flit
+keyring~=23.5.0
+
 -r requirements_both.txt
