--- a/copier.yml
+++ b/copier.yml
@@ -50,15 +50,15 @@ optional_question:
   help: Ask optional questions?
   default: no
 
-  test_1:
-    type: bool
-    help: test_1?
-    default: no
+  # test_1:
+  #   type: bool
+  #   help: test_1?
+  #   default: no
 
-  test_2:
-    type: bool
-    help: test_2?
-    default: no
+  # test_2:
+  #   type: bool
+  #   help: test_2?
+  #   default: no
 
 _skip_if_exists:
   - .gitignore
