--- a/copier.yml
+++ b/copier.yml
@@ -42,7 +42,7 @@ python_version:
 
 include_funding:
   type: bool
-  help: Include GitHub Sponsors link for {{ project_owner_github_username }}?
+  help: "Include GitHub Sponsors link for {{ project_owner_github_username }}?"
   default: no
 
 optional_question:
@@ -50,15 +50,17 @@ optional_question:
   help: Ask optional questions?
   default: no
 
-  # test_1:
-  #   type: bool
-  #   help: test_1?
-  #   default: no
+  test_1:
+    when: "{{ optional_question }}"
+    type: bool
+    help: test_1?
+    default: no
 
-  # test_2:
-  #   type: bool
-  #   help: test_2?
-  #   default: no
+  test_2:
+    when: "{{ optional_question }}"
+    type: bool
+    help: test_2?
+    default: no
 
 _skip_if_exists:
   - .gitignore
