This will do for now

--- a/template/.gitignore
+++ b/template/.gitignore
@@ -1,26 +1,31 @@
-# Tooling
-{% if not override_coveragerc  %}.coveragerc{% endif %}
-.env
-.flake8
-.gitattributes
-.vscode/
-*.rej
-package.json
-pyrightconfig.json
-{% if not override_pytest  %}pytest.ini{% endif %}
-tooling/bump_pyproject.py
-tooling/pythonrc.py
-tooling/requirements_both.txt
-tooling/requirements_cicd.txt
-tooling/requirements_dev.txt
+# * -------------------------------------------------------------------------------- * #
+# * PROJECT-SPECIFIC GITIGNORE
+
 
 # * -------------------------------------------------------------------------------- * #
+# * TEMPLATE GITIGNORE
+# *
+# * Changes here will be overwritten by Copier; NEVER EDIT MANUALLY
+
+#[[
+
+test
+best
+~.west
+
+#]]
+
+# * -------------------------------------------------------------------------------- * #
+# * Node.gitignore
+# *
 # * https://raw.githubusercontent.com/github/gitignore/master/Node.gitignore
 
 # NPM/Node.JS because of Pyright CI/CD dependency
 node_modules/
 
 # * -------------------------------------------------------------------------------- * #
+# * Python.gitignore
+# *
 # * https://raw.githubusercontent.com/github/gitignore/master/Python.gitignore
 
 # Byte-compiled / optimized / DLL files
@@ -130,7 +135,6 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-.env
 .venv
 env/
 venv/
