Move what used to be the only script into the newly-created scripts directory

--- a/dependabot/.github/workflows/bump.yml
+++ b/dependabot/.github/workflows/bump.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           python-version: "{{ python_version }}"
       - run: bash tooling/cicd_setup.sh
-      - run: python tooling/bump_pyproject.py
+      - run: python tooling/scripts/bump_pyproject.py
       - uses: stefanzweifel/git-auto-commit-action@v4.14.0
         with:
           commit_message: Bump `pyproject.toml` dependencies
